Fix button wrap on mobile

--- a/src/wwwroot/css/style.css
+++ b/src/wwwroot/css/style.css
@@ -118,6 +118,9 @@ p {
     .page-section_column.pad-fix--sm {
         padding-top: 0;
     }
+    .site-button_row {
+        flex-direction: column;
+    }
 }
 
 .page-section_column.pad-fix_add--md {
